H28セキュリティ完了

--- a/AppliedInformation/午後/H28A.md
+++ b/AppliedInformation/午後/H28A.md
@@ -2,9 +2,58 @@
 
 ---
 
-## セキュリティ
+## セキュリティ 生体認証システムの導入
 
-``` txt
+10分で事足りる内容であった。  
+全体的に作りが雑だなと思いつつ、半分くらいしか正解できないのは痛かった。  
+
+セキュリティ技術的な面はよかったのだが、セキュリティを導入するにあたっての論点を見出すことができなかった。  
+
+コストを抑えたいという点に着目し、従来のサーバーを使える製品を押してみたがダメだった。  
+一番本人拒否率が高い点が不安だったが、それでも8割くらいは文中の情報と一致していると見たからだ。  
+その論点部分ができなかっただけで、他は問題なかったので、適当にまとめて終わりにする。  
+
+後、地味にPKIが何かわからなかったので、そこはしっかりまとめる。  
+
+``` txt : 10分 4/7
+ウ
+ア、イ
+イ
+
+指紋特徴点だけでは元の指紋を特定できないため
+他)漏洩しても元の指紋全体を再現できないから
+
+従来の認証サーバーを使用できるのでコストを抑えられる
+→個人情報と指紋情報を物理的に分けて管理できる
+
+他人受入率が低く本人拒否率もそこそこでバランスが良い
+→誤って他人を品人と認識する確率が低い
+
+E × B
+
+---
+
+[2]
+〔cについて〕
+表2の概要によると「ICカードに埋め込んだ利用者の秘密鍵」とあるため、公開鍵暗号方式が採用されていることが分かります。
+
+公開鍵暗号方式を使用してクライアント認証を行うには、利用者のシステムやICカードなどのデバイスに秘密鍵とその証明書（クライアント証明書）を格納しておきます。サーバ側では、クライアント証明書を確認し、信頼できる認証局から発行されたものであれば認証します。使用時にPINの入力を併用するのは、ICカードの紛失や盗難に対応するためです。
+
+この認証を実現するには、クライアント証明書が正しいことを保証する第三者機関であるCA(Certification Authority，認証局)の設置が必要です。PKI(Public Key Infrastructure，公開鍵基盤)は、公開鍵暗号方式で鍵の所有者を保証する一連の仕組みです。公開鍵暗号方式を用いた認証ではPKIの導入が必須となります。CAはPKIの構成要素の1つです。
+
+
+[3]
+指紋情報の格納場所がPC内であるA及びCを除外し、B、D、Eの製品の特徴を考察します。
+
+まず、指紋情報の格納場所についてですが、B、Dが専用の認証サーバ内であるのに対し、Eは従来の認証サーバ内の拡張領域となっています。〔生体認証システムの導入〕の最後に、「個人情報と指紋情報を物理的に分けた上で一括管理を行う方針」と記載されていますが、従来の認証サーバ内には、氏名などの個人情報とIDが格納されており、拡張領域に指紋情報を格納する場合、物理的に分けるという方針に合いません。このためEは選択から除外されます。
+
+残ったBとDについては他人受入率と本人拒否率に違いがあります。本人拒否率はどちらも0.002で同じですが、他人受入率はBの方が低くなっています。他人受入率とは、他人を本人と間違えて認証してしまう確率ですので低い方が優秀です。この点でBに分があります。
+
+以上の理由により、Bが選択されることとなります。T君がBを選択したのは、上記の説明の通り「個人情報と指紋情報を物理的に分けて管理できること」及びCと比べて「他人受入率が低いこと」という2点が理由となります。
+
+∴de＝個人情報と指紋情報を物理的に分けて管理できる、誤って他人を本人と認識する確率が低い（順不同）
+　f＝B
+
 ```
 
 ---
