--- a/AppliedInformation/午後/H28S.md
+++ b/AppliedInformation/午後/H28S.md
@@ -4,6 +4,71 @@
 
 ## 情報セキュリティ Webサイトを用いた書籍販売システムのセキュリティ
 
+珍しくダメだった。  
+話はわかったけど、細かい認識が欠落していた。  
+ざっくり疑問に思ったのは以下の点。  
+
+・HTTPS以外にセキュアなプロトコルってあったっけ？SSHくらいしか思いつかないけど？  
+・Webサーバにおける脆弱性と認識される情報ってなんだろう。  
+・ポートスキャンへの対応って単純に応答しないように設定するだけ？  
+・通信元のIPアドレスが想定範囲と離れていることで何が不都合？  
+・DNSを経由せず、直接IPアドレスを入力されるのはリスクになりえるのか？  
+
+疑問に思ったところはすべて間違っていたので、しっかり確認していきたい。  
+
+``` txt : 16分 5/10
+HTTP × TLS
+踏み台
+ゼロデイ
+
+イ
+ア
+
+通信プロトコル × 種類
+ポート × バージョン
+応答しないようにする × 必要なポートだけ開ける
+WAF
+
+ウ、オ × ア、ウ、オ
+
+---
+
+[1]
+〔aについて〕
+Webシステムという性格上、顧客はWebサーバと通信を行うことになるため、やり取りに使用されるプロトコルはHTTPになります。HTTP通信の暗号化を行うインターネット標準規格はTLS(Transport Layer Security)です。
+TLSはSSL3.0をもとに策定された規格で、現在のインターネット通信において認証・暗号化・改ざん検知の機能を提供する標準プロトコルです。2020年現在の最新版はTLS1.3です。
+
+なぜSSLではなくTLSなのかということにも言及しておきます。以前からHTTP通信の暗号化ではSSLがインターネット標準として使用され、今でもTLS/SSLというように併記されることがあります。しかし現在、SSLはセキュリティ上の脆弱性により使用が非推奨とされている※ためインターネット標準という観点からいえば不適切となります。
+
+∴a＝TLS
+
+※2015年6月、RFC7568によってSSL3.0の使用は禁止された(Wikipediaより)
+→
+セキュアな通信プロトコルはHTTPSがダメならTLSとかSSLとかそういうのがある。  
+てかよくよく考えればHTTP over SSL/TLSなんだからTLSでも十分伝わったか。  
+午前のほうでもがっつりまとめてるのでこれは完全に俺の落ち度ですね。  
+
+
+[3]
+ポートスキャンは、コンピュータやルータのアクセス可能な通信ポートを外部から調査する行為で、不正アクセスを行うための下調べや、脆弱性検査などの目的で実施されます。スキャン対象の応答からOSの種類、稼働しているサービスとそのバージョンなどの情報が得ることが可能です。
+WebサーバはDMZに設置され外部からのアクセスを受け付けている状態です。このためポートスキャンは容易に成功し、Webサーバソフトウェアの種類とそのバージョン情報などを得ることができます。
+
+∴種類，バージョン
+
+表2の項番1の改善対策欄にて「Webシステムのサービスに必要なポートだけをインターネットに公開する。Webサーバが必要のない問合せに応答しないようにする。」とポートスキャンへの対策が説明されています。不必要なポートを開けたままにしておくと攻撃者に情報や攻撃チャンスを与えることになってしまうため、「必要なポートだけ開ける」ように設定を変更し、構成情報をできるだけ秘匿する必要があります。
+
+∴必要なポートだけ開ける
+
+
+
+[4]
+ア
+正しい。通常であればWebサイトへのアクセスはドメイン名で行うため、IPアドレスの直打ちでのアクセス自体がかなり特殊です。IPアドレスを1ずつ増加させながらpingを送信し、インターネット上に存在するホストを検出するPINGスイープという行為がありますが、「ア」はそれのHTTP版にあたる行為であると推測できます。したがってサイバー攻撃の可能性があると判断できます。
+
+オ
+正しい。送信元が偽装されている、又は、本来アクセスがあるはずのない地域から行われたものと考えられるため、サイバー攻撃の可能性があると判断できます。
+```
+
 ---
 
 ## プログラミング ライフゲーム
@@ -102,9 +167,15 @@ VLAN20
 
 ## データベース コンビニエンスストアにおけるデータウェアハウス構築及び分析
 
+``` txt
+```
+
 ---
 
 ## 組込みシステム開発 飲食店向けタッチ式注文端末
+
+``` txt
+```
 
 ---
 
