--- a/AppliedInformation/午後/H26S.md
+++ b/AppliedInformation/午後/H26S.md
@@ -2,7 +2,60 @@
 
 ---
 
-## セキュリティ
+## セキュリティ 営業支援サーバへのSSL導入
+
+最後の問題でしっくりくる答えが思いつかなくて26分もかかってしまった。  
+結局あってたからよかったけど、全体的には10分で最後の問題までいけたので難易度は優しい。  
+
+最後の問題、クライアント証明書に対して行う適切な対応について、PCにインストールされたクライアント証明書をどうにかするのかってことしか考えられなかった。  
+クライアント証明書に対してパスフレーズの設定等できるのだろうか？なんて考えたけど、そんな話聞いたことがない。  
+それかPCを持ち出すときにクライアント証明書の有効期限をその日だけに設定するとかも考えた。  
+でも、そんな面倒なことするくらいならサーバ側で失効を確認して拒否すればいいだけだよな。  
+証明書は失効リストに載せる話しか聞いたことないし、もうそれでいいやってやったら当たった。  
+認識あってマス。  
+
+``` txt 26分 7/8
+盗聴
+改ざん
+
+P社のノートPCであることを確認するため
+→営業支援システムを利用できるPCを限定するため
+
+クライアント証明書のインストール作業 100%
+社内からは営業支援サーバを使用可能であるため 100%
+他)社内LANからの利用には被害が及ばないから
+HTTPS
+HTTP
+
+対象のクライアント証明書を失効リストに載せる 100%
+他)当該PCのクライアント証明書を失効させる
+
+---
+
+[2]
+設問中にも指摘があるように、営業支援サーバが社外の不特定多数のPCからアクセス可能になっていると、不正アクセスや情報漏えいの危険性が高まります。
+
+SSL/TLSにはクライアント証明書を使用したクライアント認証の機能があり、認証されたクライアントのみがサーバと通信を行えるようにできます。上記のセキュリティリスクを踏まえると、PCへのクライアント証明書のインストールは、社外から営業支援サーバにアクセスできるPCを限定する(不特定多数からのアクセスを禁止する)ために行われると判断できます。
+
+∴営業支援システムを利用できるPCを限定するため
+
+
+
+[4]
+PCの紛失や盗難が発生した場合、通常は以下の事後対応をとります。
+PCを遠隔ロックする
+ログイン用パスワードを変更する
+警察に被害届を出す
+顧客情報が保存されている場合は顧客に知らせる
+しかし、この設問ではクライアント証明書に対して実施することを問うているため、これに限定して考えます。
+
+営業支援システムを利用するにはクライアント証明書がインストールされたPCを使用して、正しいIDとパスワードの組合せを入力する必要があります。つまり、クライアント証明書が無効であれば営業支援システムにはアクセスできません。運用予定のPC管理台帳では、証明書をインストールしたPC、PCの使用者、証明書の識別情報、証明書の有効・無効などの情報が管理されるため、PC管理台帳をもとに該当する証明書を失効させる手続きをとることが可能です。
+この措置によって紛失・盗難が発生したPCを悪用した営業支援システムへの不正アクセスを防止できます。
+
+∴当該PCのクライアント証明書を失効させる
+
+
+```
 
 ---
 
@@ -232,7 +285,77 @@ A.船便番号,A.船便名,C.座席クラス番号,C座席クラス名
 
 ---
 
-## 組込みシステム
+## 組込みシステム 園芸用自動給水機
+
+まぁ、できたほうではなかろうか？  
+結構サービス問題もあったし、優しいほうだと思うけど、根本的にわからない問題もあったので、それはそれでまとめる。  
+短絡の意味って何さね。  
+短絡する条件って言われても短絡の意味がわからないのでなんともだったが、複数ボタン押してやればいろいろつながりそうだからってことで答えたらまさかの正解だった。  
+セマフォの下りはわけわからん。  
+
+``` txt : 30分 7/10
+給水設定
+給水弁操作
+128
+0 × 2
+排他 × アクセス権
+
+ユニット × 6
+その列のキーを2つ以上押す 100%
+他)複数のキーを同時に押す
+
+給水設定
+
+認証
+暗号化
+
+---
+
+[1]
+〔cについて〕
+セマフォとは複数のプロセスが並行動作している状況で、共通資源（リソース）の排他制御をする仕組みです。基本となるセマフォは、セマフォ変数、P操作、V操作という3つの要素で構成されます。
+セマフォ変数
+現時点で利用可能な資源数を表す整数型の変数
+P操作
+セマフォ変数が0でなければ資源のアクセス権を獲得し、セマフォ変数の値を1だけ減らす
+V操作
+資源を解放し、セマフォ変数の値を1だけ増やす
+セマフォの値は同時に利用可能な資源数を表しています。本問の給水器は、同時に給水できるのは最大2ユニットまでですので、セマフォの初期値は「2」となります。
+
+∴c＝2
+
+〔dについて〕
+セマフォ変数の値は利用可能な給水可能なユニット残数を表しています。給水弁操作ユニットでは給水弁を開ける前にセマフォの獲得を試みます。このとき、セマフォ変数の値によって動作が分岐します。
+セマフォ変数が2 または 1
+給水弁を開く
+セマフォ変数が0
+待ち状態に移行
+模範解答では「アクセス権」となっていますが、「セマフォ」や「使用権」といった語句でも問題ないはずです。
+
+∴アクセス権
+
+
+[2]
+キースキャン回路はスイッチを格子状の配線にした回路で、出力ポートから1（H：ハイレベル）を出力し、そのときの入力ポートの値をスキャンすることで各スイッチのON/OFFを判断するものです。本問のキースキャン回路では、MCUから出力ポートP0～P3に順次1を出力し、スイッチが押されていれば通電により対応する入力ポートの値が1になるという具合です。
+
+表2は上から1行ごとに次のように見ます。
+P0をハイレベル（=1）にしても、P4～P7は変化なし
+P1をハイレベル（=1）にしたら、P5がハイレベル（=1）になった
+P2をハイレベル（=1）にしても、P4～P7は変化なし
+P3をハイレベル（=1）にしても、P4～P7は変化なし
+本問では入力ポートのうち値が1になっているP5に注目します。出力ポートP1=1のときに、あるキーを押下することでP5=1となったのですから、図3の回路図でP5とP1の線が交わる「6」が押されたと判断できます。
+
+∴6
+<https://www.ap-siken.com/kakomon/26_haru/img/pm07_6.gif>
+
+例えば、P0=1の場合にP1～P3のいずれかが1となるとに短絡（ショート）が発生します。短絡が発生すると定格以上の電流が流れるので出力ポートが破損する恐れがあります。ダイオードは電流の流れを一方向にする装置で、過電流が出力ポートに流れるのを防止します。
+
+キースキャン回路で短絡が起こるのは、「設定開始」と「7」「8」「9」のいずれかを同時に押下するなどのように、同じ行に配置されている複数のキーを同時に押したときです。
+<https://www.ap-siken.com/kakomon/26_haru/img/pm07_7.gif>
+
+∴複数のキーを同時に押す
+
+```
 
 ---
 
