--- a/AppliedInformation/午後/H27S.md
+++ b/AppliedInformation/午後/H27S.md
@@ -2,6 +2,73 @@
 
 ---
 
+## セキュリティ 電子メールのセキュリティ
+
+直近のセキュリティでは時間がかかったほうだと思われる。  
+不審なメールを受信したらどうするって単純な対応に何があるか思いつかなくて時間がかかってしまった。  
+セキュリティチェックもありかなって思ったけど、削除するだけだった。  
+それ以外は特に問題ない。  
+SPF,ハッシュ,改ざんなどのキーワードもしっかり抑えている。  
+
+・不審なメールが届いた人に指示する内容とは？  
+→不審なメールの削除  
+受信したところで念のためシステムチェックやウイルス対策ソフトによるチェック等も考えたけど、単純に消すだけでよかったか。  
+というか、自分も小山さんからのメールが届いたら即ゴミ箱に入れてるしな。  
+
+``` txt : 23分 7/8
+イ
+カ
+
+公開
+ハッシュ
+改ざん
+
+メールサーバに不正アクセスされ、メールを閲覧されてしまうから 0%
+→開封済みメールを含めてすべてのメールを読まれる恐れがあるから
+ほぼ正解でいいだろう。パスワードもれたらなんでもログインし放題なんだから。
+
+ア、イ
+
+ウイルスチェックを実施する
+→不審なメールの削除
+
+---
+[3]
+現状のメールシステムと新メールシステムでは、PCで開封したメールに対する処理に違いがあることが設問中の以下の記述より読み取れます。
+現メールシステム
+社内PCで開封したメールは，メールサーバから削除され，社内PCに保存される
+新メールシステム
+社内で開封したメールも含め，すべての受信メールが一定期間メールサーバに残る
+
+このためIMAPを採用した新メールシステムに移行すると、社内PCで開封したメールが削除されない分だけメールサーバに残るメール数が以前より増えることになります。
+
+パスワードが流出し第三者に不正ログインされた場合、メールサーバ内のメールをすべて見られてしまいます。このためメールサーバに保存されているメール数が以前よりも多くなる新メールシステムでは、情報漏えいに繋がるセキュリティリスクは増加するといえます。
+
+∴開封済みメールを含め全てのメールを読まれるおそれがあるから
+
+
+
+[4]
+ア
+正しい。業務に必要であるにもかかわらずフィルタリングの判定ミスにより一時保管メールボックスに振り分けられてしまったメールを、受信者が必要に応じて取り出せる機能が必要です。
+
+イ
+正しい。表３「メールの内容チェックの詳細」に従えば、会社や顧客の重要情報を含むメールは一切送信できないことになり、業務のスムーズな遂行に支障が出ると考えられます。このため重要情報を含むメールであっても上長などに承認を得たメールは宛先に送信できる仕組みが必要です。
+
+エ
+フィルタリングの内容を，社員が設定する機能
+利用者が自分の判断でフィルタリングルールを設定することはセキュリティ上好ましくありません。
+
+
+
+[5]
+不審なメールが届いた際には、まず送信者の所属先の存在や在籍確認、メール送達の事実確認を行います(電話確認推奨)。その結果、標的型攻撃メールであることが疑われる場合には、該当メールを読む可能性がある人へ、添付ファイルを開くことなくメールを削除するように連絡することで被害を未然に防ぐ対応が求められます。
+
+∴不審なメールの削除
+```
+
+---
+
 ## プログラミング データ圧縮の前処理として用いられるBlock-sorting
 
 久しぶりに敗北した。  
