--- a/AppliedInformation/午後/H28S.md
+++ b/AppliedInformation/午後/H28S.md
@@ -167,14 +167,112 @@ VLAN20
 
 ## データベース コンビニエンスストアにおけるデータウェアハウス構築及び分析
 
-``` txt
+久しぶりのデータベースの問題でうまくできるか不安だったが、簡単なほうだったので問題なくいけた。  
+全体的にオードソックスなデータベースの問題だった。  
+長文は微妙に間違えてるかもしれないが、部分点くらいはもらえる出来ではなかろうか？  
+
+・ORDER BY でAVG関数を実行した別名で指定できるっけ？  
+→できるっぽい。ORACLEでもやってる。できないと記憶していたのは何だったのか。  
+・長文における肝は販売されたのに在庫が動いていないデータ。そこをつければなんでもいい？  
+→具体的なテーブルは必要なかった。販売したのに在庫が変動していないデータを抽出できれば十分そうだった。  
+・SUM(NULL)の結果は?0?じゃなきゃ販売されていない数量は0になるという案件を満たせない。ちゃんと確認する。  
+→結果的には勘違いだったが、SUMはNULLが1件でも含まれていると結果がNULLになるので、ISNULLでNULL変換する必要あり。  
+
+ORDER BY句は、結果レコードの順序を指定するときに使用します。  
+結果レコードをソートするには、属性名または任意式を指定します。  
+
+``` sql
+RETURN Results AS
+SELECT SUM(Price) AS Total
+GROUP BY WineType
+ORDER BY Total DESC
+```
+
+``` txt : 22分 8/9 実質全問正解
+販売時単価
+←
+←
+
+LEFT OUTER JOIN
+ST.店舗ID = SS.店舗ID
+ST.商品ID = SS.商品ID
+
+ORDER BY SF.売上年月 DESC,SF.店舗ID,AVG(SF.日間在庫数量) DESC ×
+ORDER BY SF.売上年月 DESC，SF.店舗ID ASC，平均在庫数量 DESC
+
+α
+売上ファクト表から販売実績があるのに在庫実績が存在しない在庫実績のデータ 100%
+他)在庫数量を記録していない日の商品の在庫数量を実績から導出したデータ 
+
+---
+
+[3]
+〔gについて〕
+〔売行きが悪い商品分類の一覧の作成〕には「一覧は，売上年月が新しいものから，店舗IDを昇順にして，平均在庫数量が多い順に表示させる。」とあります。図3のSQL文には表示順に関する記述がないので「ORDER BY句」を追加する必要があります。SELECT文で取得されたレコードを、ORDER BY句を用いて売上年月の降順、店舗IDの昇順、平均在庫数量の降順に並び替えるには以下の指定が必要です。
+
+※昇順にする場合は列名の直後にASCを記述し、降順にする場合は列名の直後にDESCを記述しますが、ASCの方は省略可能です
+
+売上年月が新しいものから(降順) → SF.売上年月 DESC
+店舗IDを昇順にして → SF.店舗ID ASC
+平均在庫数量が多い順(降順)に → 平均在庫数量 DESC
+
+したがって、空欄には「ORDER BY SF.売上年月 DESC, SF.店舗ID ASC, 平均在庫数量 DESC」が当てはまります。
+（※SF.はつけなくてもSQL文は動作しますが、問題の指示により列名の前に表名をつける必要があるので注意してください）
+
+∴g＝ORDER BY SF.売上年月 DESC，SF.店舗ID ASC，平均在庫数量 DESC
+
+
+[4]
+(1)で述べたように、不足しているデータとは在庫記録がなかった日の在庫数量データです。1日3回の在庫確認を徹底すれば済みそうですが、在庫変動が乏しい商品をチェックするのは手間ですし、設問の指示に「販売及び在庫管理の運用方法は変更しないこと。」とあるので、現状の運用方法のままで解決する方法を考えます。
+
+在庫記録がない場合であっても、日ごとの在庫数は、直前に記録された在庫数量と販売表および販売詳細表の販売実績から論理的に導出できるので、在庫記録がなかった日の在庫数量データとしてこのデータを挿入すれば期待どおりに動作するようになります。したがって、"α"の表に追加されるべき不足するデータとは「記録していない日の在庫数量を、直前に記録した日の在庫数量と販売数量から求めたデータ」になります。
+
+∴在庫数量を記録していない日の商品の在庫数量を実績から導出したデータ
+
 ```
 
 ---
 
 ## 組込みシステム開発 飲食店向けタッチ式注文端末
 
-``` txt
+30分かけてしまったが、25分の地点でほぼ回答は完了していたし、何より簡単だった。  
+久しぶりにやってみたけど、これは簡単な部類の問題なので特に問題ない。  
+
+今回は都度、ノートにグラフや流れを書きながら問題文を追っていったのでとても解きやすかった。  
+この程度の工夫でこれほどまでに効果が出るのに驚いている。  
+残りの問題もこのペースでやってみる。  
+
+``` txt : 30分 6/7
+
+0.7
+ウ
+エ
+
+タッチパネル
+タッチされた座標 (タッチされた座標情報)
+
+画面の切替え中か
+
+呼び出し元の画面種別 ×
+有効なボタンの座標情報
+
+---
+
+[4]
+下線②の情報とは、入力判定タスクからメインタスクへの通知に含まれる二つの情報です。
+
+ボタンをタッチした場合、端末はタッチされたボタンに対応する画面を表示しますが、次にどの画面を表示するかはメインタスクで決定されます（入力判定タスクはタッチの有効性を判断するだけで、どのボタンが押されたかまでは判断しません）。このため、入力判定タスクからは次の画面を判断するために必要な情報をメインタスクに通知する必要があります。
+
+メインタスクが次の画面を判断するためには、どの画面のどのボタンが押されたかを知らなくてはなりません。つまり、必要な情報とは「現在の画面種別」と「有効なボタンの座標情報」です。したがって「有効なボタンの座標情報」が答えとなります。
+
+∴有効なボタンの座標情報
+
+→
+最初に書いた「ボタンの座標」ってのもあながち間違いではなかったのかもしれない。
+少なくとも部分点くらいはもらえる回答だったと思う。
+画面種別ってのは現在の画面のことを言っているのだとわかれば悩む必要はなかった。
+だとしたら、次の画面に遷移するための情報は限られてくるからある程度の予測はできただろうに。
+
 ```
 
 ---
