R3A模試、他まとめなど

--- a/AppliedInformation/午後/H26S.md
+++ b/AppliedInformation/午後/H26S.md
@@ -335,7 +335,7 @@ V操作
 ∴アクセス権
 
 
-[2]
+[2][1]
 キースキャン回路はスイッチを格子状の配線にした回路で、出力ポートから1（H：ハイレベル）を出力し、そのときの入力ポートの値をスキャンすることで各スイッチのON/OFFを判断するものです。本問のキースキャン回路では、MCUから出力ポートP0～P3に順次1を出力し、スイッチが押されていれば通電により対応する入力ポートの値が1になるという具合です。
 
 表2は上から1行ごとに次のように見ます。
@@ -348,12 +348,24 @@ P3をハイレベル（=1）にしても、P4～P7は変化なし
 ∴6
 <https://www.ap-siken.com/kakomon/26_haru/img/pm07_6.gif>
 
+→
+根本的に勘違いしていた。
+キースイッチがつながったらアース側に流れるモノだと思ってたけど、全然違ったわ。
+出力から入力に流れてそのパターンで何が押されたのか認識するって流れなら入力ポートって名称も納得だわな。
+その前提から問題文を見れば納得だが、当時それでわかったかといえば無理だろうな。
+
+
+[2][2]
 例えば、P0=1の場合にP1～P3のいずれかが1となるとに短絡（ショート）が発生します。短絡が発生すると定格以上の電流が流れるので出力ポートが破損する恐れがあります。ダイオードは電流の流れを一方向にする装置で、過電流が出力ポートに流れるのを防止します。
 
 キースキャン回路で短絡が起こるのは、「設定開始」と「7」「8」「9」のいずれかを同時に押下するなどのように、同じ行に配置されている複数のキーを同時に押したときです。
 <https://www.ap-siken.com/kakomon/26_haru/img/pm07_7.gif>
 
 ∴複数のキーを同時に押す
+
+→
+上に戻るわけがないと思っていたが戻る模様。
+そんなことなら複数同時押し以外はないだろうな。
 
 ```
 
