--- a/AppliedInformation/午後/H27A.md
+++ b/AppliedInformation/午後/H27A.md
@@ -382,6 +382,9 @@ RTCの1日の誤差が次の日になっても補正されず、誤差が1秒以
 
 ∴時計の補正機能によって、時計の時刻が1秒以上変化したとき
 
+→
+まさか補正するときにずれるなんて思わなんだ。
+
 
 [2]
 〔サーバの機能〕について、サーバのデータベース上で、電力量データの欠落を検出するのに使用するデータの情報を考えます。
@@ -431,6 +434,10 @@ A/Dコンバータに必要な最小ビットを求めます。
 
 ∴a＝22
 
+→
+なかなか屈辱的な間違いだった。
+2進数の分数表記になると思考停止する。
+そりゃそうだよな。小数点以下は分数と同じだよな・・・。
 
 
 [4][2]
@@ -443,6 +450,12 @@ A/Dコンバータに必要な最小ビットを求めます。
 となります。小数第1位を切り捨てて整数で答えを求めるため「17」が適切です。
 
 ∴17
+
+→
+文中にある時間を使って解くならこれしかないだろうなと思って解いたら当たった。
+アプローチは若干違うけどまぁいいだろう。
+0.7/24 = 0.0291666..
+0.5/0.029 = 17.2...
 ```
 
 ---
