--- a/BasicInformation/午前/1.テクノロジ系/5.ソフトウェア.md
+++ b/BasicInformation/午前/1.テクノロジ系/5.ソフトウェア.md
@@ -377,6 +377,19 @@ LPICでやったので問題ない。
 
 ※共有資源を管理する  
 
+**セマフォ変数**  
+現時点で利用可能な資源数を表す整数型の変数  
+
+**P操作**  
+セマフォ変数が0でなければ資源のアクセス権を獲得し、セマフォ変数の値を1だけ減らす  
+
+**V操作**  
+資源を解放し、セマフォ変数の値を1だけ増やす  
+
+セマフォの値は同時に利用可能な資源数を表しています。  
+平成26年春期 午後問7の例であれば同時に給水できるのは最大2ユニットまでですので、セマフォの初期値は「2」となります。  
+排他を獲得よりはセマフォの獲得の包夫が一般的な模様。  
+
 ### IOは競合しない  
 
 IO中にCPUが実行可能。  
