--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -652,6 +652,17 @@ IETFによってRFC 7519として標準化されている。
 
 [NULLを排除した設計①](http://onefact.jp/wp/2014/08/26/null%E3%82%92%E6%8E%92%E9%99%A4%E3%81%97%E3%81%9F%E8%A8%AD%E8%A8%88/)  
 
+
+
+・クエリエラー調査
+DISTINCTとワイルドカード `*` を併用したら.NETFrameworkで実行速度が遅くなるらしい
+
+SUMはNULLが1件でも含まれると結果がNULLになる。
+
+NaN (not-a-number)
+
+
+
 ---
 
 ##
@@ -694,7 +705,3 @@ IETFによってRFC 7519として標準化されている。
 
 トーレス・デル・パイネ国立公園
 avalon peninsula canada
-
-・クエリエラー調査
-DISTINCTとワイルドカード `*` を併用したら.NETFrameworkで実行速度が遅くなるらしい
-
