出社前にまとめ

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -699,6 +699,15 @@ NaN (not-a-number)
 [【Laravel】確認画面付きのお問い合わせフォームを作成する【メール送信対応】](https://into-the-program.com/laravel-create-contact-form/)
 [【 Laravel 】CRUD『 表示・登録・更新・削除 』機能をCODEを書かず自動作成（Beta版機能）](https://qiita.com/daisu_yamazaki/items/3755467b39ef158b81a3)
 
+<https://twitter.com/Sheeeeepla/status/1512642396416528387>
+Windowsをインストールしたらやること
+☑Sysinternalsを入れて不要な・サービス・スタートアップを探して止める
+☑NoMeiryoUIでシステムフォントをIBM Plex Sans JPに変更
+☑AutoHotKeyでIME変換キーをAlt単押しで切替可に
+☑OneDriveの無効化
+☑Remove-AppxPackage
+☑PowerShell Coreをインストール
+
 ---
 
 ## 雑記
