sql関係まとめ

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -658,6 +658,9 @@ Windowsをインストールしたらやること
 ☑Remove-AppxPackage
 ☑PowerShell Coreをインストール
 
+[【WPF】【MVVM】GUIのマウス/キー操作処理をコードビハインドから駆逐する](https://qiita.com/hotelmoskva_/items/13ecc724bdad00078c16)  
+[ダブルクリックイベントを持っていないコントロールで判定を拾う](https://www.hos.co.jp/blog/20200331/)  
+
 ---
 
 ## 雑記
