休日にやったもの全部

--- a/BasicInformation/午前/1.テクノロジ系/12.システム開発技術.md
+++ b/BasicInformation/午前/1.テクノロジ系/12.システム開発技術.md
@@ -60,10 +60,10 @@ UMLの1つでシステムに要求される機能を、利用者(アクタ:actor
 
 ### コミュニケーション図
 
-オブジェクト同士の関係の観点から表現する。
-NAPTの解説で、クライアント↔ルーター↔サーバーってあって、各時点でのIPアドレスとポート番号の状態を表現する図があったじゃない。
-あんな感じの書き方するのがコミュニケーション図。
-シーケンス図もコミュニケーション図もオブジェクト間のメッセージのやり取りを表現する図。
+オブジェクト同士の関係の観点から表現する。  
+NAPTの解説で、クライアント↔ルーター↔サーバーってあって、各時点でのIPアドレスとポート番号の状態を表現する図があったじゃない。  
+あんな感じの書き方するのがコミュニケーション図。  
+シーケンス図もコミュニケーション図もオブジェクト間のメッセージのやり取りを表現する図。  
 
 ### DFD(Data Flow Diagram)
 
@@ -623,7 +623,10 @@ Trueの先だけに命令があれば、Trueのルートだけ検証して、Fal
 
 #### 判定条件・条件網羅
 
-判定条件網羅と条件網羅を組み合わせてテストケースを設計する。
+判定条件網羅と条件網羅を組み合わせてテストケースを設計する。  
+
+分岐の条件をすべて試す必要はないが、true,falseどちらも通る組み合わせを試す。  
+命令は1回通ればよい。  
 
 #### 複数条件網羅(網羅性:高↓)
 
@@ -702,7 +705,8 @@ Trueの先だけに命令があれば、Trueのルートだけ検証して、Fal
 しかし図を見ると X の時点でのテスト当たりのバグの検出数がテスト初期と比較しても増加傾向にあることがわかります。
 これはテスト対象の品質が著しく悪く、未だバグが数多く内在することを示しています。
 
-令和元年秋期　問47
+#### 令和元年秋期　問47
+
 埋め込まれたエラー数をS，埋め込まれたエラーのうち発見されたエラー数をm，埋め込まれたエラーを含まないテスト開始前の潜在エラー数をT，発見された総エラー数をnとしたとき，S，T，m，nの関係を表す式はどれか。  
 
 →
@@ -719,6 +723,41 @@ $m/S=n−m/T$
 潜在エラーのうちテストで発見されたエラー数 = n－m (発見された総エラー数－埋め込まれたエラーのうち発見されたエラー数)
 
 埋め込まれたエラーの発見率$m/S$ と潜在エラーの発見率$n-m/T$は同程度と考えられるので、 $m/S=n−m/T$ の関係式が成り立ちます。
+
+#### 平成25年秋期　問48
+
+表は，現行プロジェクトのソフトウェアの誤りの発生・除去の実績，及び次期プロジェクトにおける誤り除去の目標を記述したものである。誤りは，設計とコーディングの作業で埋め込まれ，デザインレビュー，コードレビュー及びテストですべて除去されるものとする。次期プロジェクトにおいても，ソフトウェアの規模と誤りの発生状況は変わらないと仮定したときに，テストで除去すべきソフトウェア誤りの比率は全体の何%となるか。
+
+![!](https://www.ap-siken.com/kakomon/25_aki/img/48.gif)  
+
+``` txt
+問題文で与えられた条件を整理しておきましょう。
+まず埋め込まれた誤りが除去される工程ですが、設計で埋め込まれた誤りはデザインレビューで除去され、コーディングで埋め込まれた誤りはコードレビューで除去、除去されなかったものに関しては、テスト工程で除去されます。
+
+[現行プロジェクトの実績]
+デザインレビュー
+誤り件数全体の50％中、50％を除去。
+　0.5×0.5＝0.25 → 全体の25%を除去
+コードレビュー
+誤り件数全体の50％中、40％を除去。
+　0.5×0.4＝0.2 → 全体の20%を除去
+テスト工程
+残存する誤りを除去。
+　1－(0.25＋0.2)＝0.55 → 55%の誤りを除去
+[次期プロジェクトの目標]
+次期プロジェクトの目標は、現行プロジェクトの実績を基準にして、
+デザインレビュー
+現行の実績(25%)の1.5倍を除去
+　0.25×1.5＝0.375 → 全体の37.5%を除去
+コードレビュー
+現行の実績(20%)の1.5倍を除去
+　0.2×1.5＝0.3 → 全体の30%を除去
+問題となるテスト工程で除去すべき誤り比率は、
+　1－(0.375＋0.3)＝0.325
+で、全体の32.5%の誤りを除去すればよいことがわかります。
+```
+
+![!](https://www.ap-siken.com/kakomon/25_aki/img/48a.gif)  
 
 ### ステップ数
 
@@ -808,13 +847,19 @@ $m/S=n−m/T$
 
 引渡し後，変化した又は変化している環境において，ソフトウェア製品を使用できるように保ち続けるために実施するソフトウェア製品の修正
 
+※オペレーティングシステムの更新によって，既存のアプリケーションソフトウェアが正常に動作しなくなることが判明したので，正常に動作するように修正した。  
+設問の事例は、バグの修正ではなく、OSの更新により環境が変化してもソフトウェアを使用し続けられるようにするための保守ですので「適応保守」に該当します。
+平成31年春期　問48  
+
 ### 完全化保守
 
 引渡し後のソフトウェア製品の潜在的な障害が，故障として現れる前に，検出し訂正するための修正  
+
 ※予防保守との違いは、利用者のための改良、ソフトウェア製品の性能強化、または保守性を改善するための修正という点  
 
 訂正を目的とする保守のうち、(c)発見された問題に対して行うのが是正保守、(a)潜在化しているうちに問題を訂正するのが予防保守です。  
 また、改良を目的とする保守のうち、(d)環境の変化に合わせるために行うのが適応保守、(b)潜在的な障害を見つけ改良を行うのが完全化保守です。  
+システムやソフトウェアに対する保守は、その目的により、"訂正"の性質をもつ「是正保守」「予防保守」、及び"改良"の性質をもつ「適応保守」「完全化保守」の4つのタイプに分けられます(JIS X 0161)。  
 
 ---
 
