--- a/BasicInformation/午前/1.テクノロジ系/3.コンピューター構成要素.md
+++ b/BasicInformation/午前/1.テクノロジ系/3.コンピューター構成要素.md
@@ -793,6 +793,34 @@ MiniはMicroに比べて端子が少し大きめ。
 マウスやキーボード、ディスプレイ及びUSB接続などの一般的に使用される周辺機器についてはOSに標準でデバイスドライバが組み込まれていますが、その他の周辺機器を接続し使用する際には機種にあったドライバのインストールが必要となります。  
 現在では、プラグアンドプレイによるインストールが一般化しているため、昔と比較するとインストールの煩雑さが軽減されています。  
 
+## ファームウェア
+
+[わかりそう](https://wa3.i-3-i.info/word12773.html)  
+
+ハードウェアの中に住んでいる、そのハードウェアを動かすためのソフトウェア(プログラム)のこと  
+
+firm : 硬い、堅固(けんご)  
+どうでもいいが「堅固」を毎回、「けんこ」って読む。  
+
+ハードウェアの中に組み込まれて、あまり変更されないっぽい。  
+でもファームウェアの更新とかよく聞くから、更新出来ないわけではないんだろうな。  
+因みにBIOSもパソコンにとってのファームウェアに該当するんだとか。  
+
+他の出典もまとめておく。  
+
+``` txt : e-Words
+ファームウェアとは、コンピューターや電子機器等に内臓されるソフトウェアの一種で、本体内部の回路や装置等の基本的な制御をつかさどる機能を持ったもの。
+機器内部に固定的に組み込まれ、内部のハードウェアと密接に結びついており、通常の仕様や操作では原則として内容の変更を行わないことから、ハードウェアに性質が近いソフトウェアとして、firm(堅い、固定の)という語が当てられている。
+```
+
+### ファームウェアとデバイスドライバの違い
+
+[わかりそう](https://wa3.i-3-i.info/diff176driver.html)  
+
+・どちらもハードウェアを動かすためのソフトウェア  
+・ファームウェアは部品に内臓されている  
+・デバイスドライバはパソコンの中にインストールされている  
+
 ### SDカード
 
 メモリカードの規格の1つです。  
