--- a/BasicInformation/午前/3.ストラテジ系/2.システム企画.md
+++ b/BasicInformation/午前/3.ストラテジ系/2.システム企画.md
@@ -1,11 +1,33 @@
 # システム企画
 
+---
 
-**グリーン調達**  
+## 調達計画・実施
+
+### 情報システム・モデル取引・契約書
+
+ユーザとベンダのあるべき理想的なモデルを提示し、情報システムのライフサイクルプロセスの中で、ユーザとベンダの間でどのようなことを決定し、どのようなことを情報共有すればよいか、についての統一的な指針を目指して策定されたものです。  
+
+この指針では、見積り時期とリスクとの関係を踏まえ、ユーザ・ベンダの双方のリスクアセスメントの機会を確保する観点から「多段階契約」の考え方を採用しています。  
+多段階契約とは、委託開始に際して役割分担等の要旨だけを記した基本契約だけを先に結んでおき、具体的な委託内容については「システム化の方向性～システム化計画」「要件定義」「外部設計」「内部設計以降」というような工程毎に個別契約を締結する契約方式です。  
+これにより曖昧な段階で行われた見積りは、要件が明らかになった段階で再見積もりされることになります。  
+多段階契約を採用すると、契約事務の手間は増大しますが、一括契約方式と比較して開発途中で発生する仕様変更の影響を極力抑えられる利点があります。  
+
+※開発段階において，前工程の遂行の結果，後工程の見積前提条件に変更が生じた場合に，各工程の開始のタイミングで，再度見積りを可能とするため  
+正しい。多段階契約の考え方を採用する目的です。  
+
+迷った回答  
+・サービスレベルの達成・未達の結果に対する対応措置(協議手続，解約権，ペナルティ・インセンティブなど)及びベンダの報告条件などを定めるため
+→  
+SLA導入の目的です。  
+
+### グリーン調達
+
 品質や価格の要件を満たすだけでなく，環境負荷の小さい製品やサービスを，環境負荷の低減に努める事業者から優先して購入することである。
 
-**グリーン投資**  
-環境保全活動を実施している企業がその活動内容を広くアピールし，投資家から環境保全のための資金を募ることである。
+### グリーン投資
+
+環境保全活動を実施している企業がその活動内容を広くアピールし，投資家から環境保全のための資金を募ることである。  
 
 **ISO 14020シリーズが定める環境ラベリング制度**  
 第三者が一定の基準に基づいて環境保全に資する製品を認定する，エコマークなどの環境表示に関する国際規格のことである。
