--- a/BasicInformation/午前/3.ストラテジ系/7.法務.md
+++ b/BasicInformation/午前/3.ストラテジ系/7.法務.md
@@ -87,13 +87,17 @@
 11. 不当な給付内容の変更及び不当なやり直し  
 下請事業者に責任がないのに，発注の取消若しくは発注内容の変更を行い，又は受領後にやり直しをさせることにより，下請事業者の利益を不当に害する行為  
 
-[例1]  
+[例1 平成30年秋期　問80]  
 親事業者があらかじめ下請代金を決定しないで発注し、納品後に価格を交渉・決定することは、一般に、下請事業者は「取引をしない」という選択肢を失っている中で下請代金を交渉することとなるため、下請事業者にとって非常に不利な取引方法となります。  
 このようなことのないよう、下請法では、親事業者に対してあらかじめ協議の上、取り決めた下請代金の額を記載した発注書面を交付することが義務付けられています。(第3条)  
 しかし、必要記載事項のうち「その内容が定められないことにつき正当な理由があるものについては、その記載を要しないものとし、この場合には、親事業者は、当該事項の内容が定められた後直ちに、当該事項を記載した書面を下請事業者に交付しなければならない」としています。  
 
-例)  
-下請業者に委託する業務内容は決まっているが，ユーザとの契約代金が未定なので，下請代金の取決めはユーザとの契約決定後とする。  
+※下請業者に委託する業務内容は決まっているが，ユーザとの契約代金が未定なので，下請代金の取決めはユーザとの契約決定後とする。  
+
+※親事業者は、下請事業者に対して製造委託等をした場合「直ちに」書面を交付しなければなりません。  
+しかし、必要記載事項のうち「その内容が定められないことにつき正当な理由があるものについては、その記載を要しないものとし、この場合には、親事業者は、当該事項の内容が定められた後直ちに、当該事項を記載した書面を下請事業者に交付しなければならない」とされているため、業務内容が未定の業務については別途取り決めることで法律上の問題はありません。  
+
+※「具体的な金額を記載することが困難なやむを得ない事情がある場合」には「具体的な金額を定めることとなる算定方法」を記載することも認められています。  
 
 [例2]  
 親事業者が下請事業者から納品を受けた際に、下請事業者に責任がないにもかかわらず、給付の受領を拒むことは禁止されています。  
@@ -103,13 +107,14 @@
 ③契約書面に明記された納期までに納品されない場合  
 に限られます。  
 
-例)  
-納品され受領したソフトウェアの仕様を変更したいので，返品した。  
+※納品され受領したソフトウェアの仕様を変更したいので，返品した。  
 →親事業者の一方的な設計変更を理由とした受領拒否は認められていません。よって、親事業者の違法行為となります。  
 
 [例3]  
 顧客が求める仕様が確定していなかったので，発注の際に，下請事業者に仕様が未記載の書面を交付し，仕様が確定した時点では，内容を書面ではなく口頭で伝えた。  
-→正しい。書面の交付を口頭での伝達で代えることはできません。  
+→  
+正しい。書面の交付を口頭での伝達で代えることはできません。  
+仕様が未記載の書面を交付するまでは法的に問題ありませんが、確定した仕様を書面ではなく口頭で伝えている部分が、下請法の禁止行為に該当します。  
 
 ### 請負契約関係
 
@@ -483,6 +488,9 @@ A社からグループ企業であるB社に転籍した従業員の特定個人
 [例1]  
 特定個人情報の取扱状況が分かる記録を保存する。  
 →正しい。組織的安全管理措置に該当します。  
+
+※特定個人情報が記録された電子媒体を取扱区域の外へ持ち出す場合，容易に個人番号が判明しない措置を実施する。  
+物理的安全管理措置に該当します  
 
 ### 特定電子メール法
 
