--- a/BasicInformation/午前/1.テクノロジ系/2.アルゴリズムとプログラミング.md
+++ b/BasicInformation/午前/1.テクノロジ系/2.アルゴリズムとプログラミング.md
@@ -1027,10 +1027,32 @@ a－b＝24なので、12は24の倍数ではありません(×)。
 このとき2つ以上のプロセスが同時に存在することになるため再入可能であることが求められます。  
 
 ※再入可能
+※再入可能ということは、呼び出されたプログラムごとに別個の変数部分を保持するということです。  
 
 ### 再配置可能(リロケータブル,Relocation)
 
 プログラムを主記憶上のどの位置においても処理が可能な性質。  
+
+### 令和3年秋期　問6
+
+プログラム特性に関する記述のうち，適切なものはどれか。  
+
+再帰的プログラムは再入可能な特性をもち，呼び出されたプログラムの全てがデータを共用する。  
+再使用可能プログラムは実行の始めに変数を初期化する，又は変数を初期状態に戻した後にプログラムを終了する。  
+再入可能プログラムは，データとコードの領域を明確に分離して，両方を各タスクで共用する。  
+再配置可能なプログラムは，実行の都度，主記憶装置上の定まった領域で実行される。  
+
+再帰的プログラムは再入可能な特性をもち，呼び出されたプログラムの全てがデータを共用する。
+再帰的プログラムは、複数のプロセスにより同時に実行されるため再入可能でなければなりません。再入可能ということは、呼び出されたプログラムごとに別個の変数部分を保持するということです。
+
+再使用可能プログラムは実行の始めに変数を初期化する，又は変数を初期状態に戻した後にプログラムを終了する。
+正しい。再使用可能プログラムでは、再使用の際に前の実行時データを使ってしまわないように、プログラムの最初または最後で変数を初期化する処理が必要です。
+
+再入可能プログラムは，データとコードの領域を明確に分離して，両方を各タスクで共用する。
+再入可能プログラムでは、コード領域は各タスクで共用し、データ領域は各タスクごとに持ちます。
+
+再配置可能なプログラムは，実行の都度，主記憶装置上の定まった領域で実行される。
+再配置可能プログラムは、主記憶上のどの位置においても正しく実行される特性を持つので誤りです。
 
 ---
 
