--- a/BasicInformation/午前/1.テクノロジ系/3.コンピューター構成要素.md
+++ b/BasicInformation/午前/1.テクノロジ系/3.コンピューター構成要素.md
@@ -42,7 +42,8 @@ CPUの制御装置にある専用レジスタの1つで、次にフェッチ(メ
 
 ### ALU(Arithmetic Logic Unit)
 
-演算装置。論理演算と加算、減算を行う。記号はめっちゃ太字のVみたいなやつ。  
+演算装置。論理演算と加算、減算を行う。  
+記号はめっちゃ太字のVみたいなやつ。  
 
 ### アキュムレータ
 
