--- a/BasicInformation/午前/1.テクノロジ系/5.ソフトウェア.md
+++ b/BasicInformation/午前/1.テクノロジ系/5.ソフトウェア.md
@@ -162,6 +162,13 @@ Linuxのswap領域のあれ。
 ※仮想記憶は主記憶のバックアップではありません。  
 ※仮想記憶方式において，論理アドレスから物理アドレスへの変換を行うのは「主記憶に存在するページをアクセスするとき」  
 
+#### 令和3年秋期　問19
+
+仮想記憶方式における補助記憶の機能はどれか。  
+→  
+あまりに基本的だけど、意外とわからなくてドキッとする。  
+補助記憶は主記憶から追い出されたデータを保持することが目的なので、ページアウトされたページを格納するのが正解。  
+
 ### ページテーブル
 
 仮想(論理)アドレスと実(物理)アドレスへの変換は、ページテーブルというアドレス対応表を使って次の手順で行われます。  
@@ -173,6 +180,15 @@ Linuxのswap領域のあれ。
 
 仮想アドレスから実アドレスへの変換は、動的アドレス変換機構(DAT)というハードウェア機構が**命令実行の度**に上記の処理を行い、仮想アドレスから実アドレスを算出しています。  
 アドレス変換はアクセスごとに行われるので、正しい記述は「主記憶に存在するページをアクセスするとき」です。  
+
+#### 平成26年春期　問18
+
+仮想記憶方式において，論理アドレスから物理アドレスへの変換を行うのはいつか。
+→
+ページフォールトが発生した時、毎回迷う。  
+ページフォールトはページイン、ページアウトの契機でしかない。  
+変換は別。  
+主記憶にアクセスする時。  
 
 ### ページング
 
