--- a/BasicInformation/午前/1.テクノロジ系/9.データベース.md
+++ b/BasicInformation/午前/1.テクノロジ系/9.データベース.md
@@ -818,6 +818,20 @@ UMLを用いて表した図の概念データモデルの解釈
 以上を整理すると、データ間の関連を適切に表すのは次の概念データモデルです。  
 　顧客(1)－(多)注文(1)－(多)注文明細(多)－(1)商品  
 
+#### 平成26年秋期　問27
+
+その月に受注した商品を，顧客ごとにまとめて月末に出荷する場合，受注クラスと出荷クラスとの間の関連のa，bに入る多重度の組合せはどれか。ここで，出荷のデータは実績に基づいて登録される。また，モデルの表記にはUMLを用いる。
+
+![!](https://www.ap-siken.com/kakomon/26_aki/img/27.gif)  
+
+複数の受注分をまとめて月末に出荷するので、1回の出荷が複数の受注に紐付けられることになります。  
+
+"出荷"表から"受注"表を見た場合、"出荷"表の1つのレコードが"受注"表の複数のレコードに対応するため多重度は"1..*"(1以上)が適切です。
+逆に"受注"表から"出荷"表を見た場合、"受注"表の1つのレコードは、既に出荷済みであれば"出荷"表の1レコードに対応しますが、月末前の出荷待ち状態であれば"出荷"表には対応するレコードがない(0個)ので、多重度は"0..1"(0か1)が適切です。  
+
+A顧客3件、B顧客2件、C顧客3件って時に出荷は3レコードできるので、多対多だと思ったがそれはDB上での話。  
+UML的には顧客の受注は1つの出荷に収まるので多対1になる寸法らしい。  
+
 ### 不整合
 
 不整合とは，例えば商品表に商品コードAの商品名は「アンパン」になっているのに，売上表の商品コードAの商品名は「コッペパン」になってる状態です。  
