--- a/BasicInformation/午前/2.マネジメント系/3.システム監査.md
+++ b/BasicInformation/午前/2.マネジメント系/3.システム監査.md
@@ -26,7 +26,9 @@
 
 システム監査基準4ページ目、Ⅴ.報告基準の監査報告についての責任 の項に「システム監査人は、監査報告書の記載事項について、その責任を負わなければならない。 」とあります。  
 
+※平成26年春期　問58  
 ※監査結果の外部への開示は経営部門の責任  
+→迷ったのはこれ。
 
 ### システム監査人の権限
 
@@ -375,15 +377,30 @@
 ①耐障害性  
 ②利用可能性  
 
+※可用性はアクセスのしやすさってだけで覚えていると間違える。  
+監査における可用性は耐久性も持ち合わせる。  
+
 例)  
 中断時間を定めたSLAの水準が保たれるように管理されていること  
 →  
 「中断時間を定めた」という部分から、このSLA項目がシステムの稼働率に関連するものだとわかります。  
 このため可用性のチェック項目と判断できます。  
 
-マスタファイルが置かれているサーバを二重化し，耐障害性の向上を図っていること  
-→
-障害が起きてもサービスの提供を維持できるような対策が実施されているかどうかが、可用性の監査項目になります。  
+#### 令和3年春期　問59
+
+マスタファイル管理に関するシステム監査項目のうち，可用性に該当するものはどれか。
+
+マスタファイルが置かれているサーバを二重化し，耐障害性の向上を図っていること
+正しい。障害が起きてもサービスの提供を維持できるような対策が実施されているかどうかが、可用性の監査項目になります。
+
+マスタファイルのデータを複数件まとめて検索・加工するための機能が，システムに盛り込まれていること
+効率性に該当する項目です。
+
+マスタファイルのメンテナンスは，特権アカウントを付与された者だけに許されていること
+機密性に該当する項目です。
+
+マスタファイルへのデータ入力チェック機能が，システムに盛り込まれていること
+完全性に該当する項目です。
 
 ### 機密性(Confidentiality)
 
