--- a/BasicInformation/午前/3.ストラテジ系/2.システム企画.md
+++ b/BasicInformation/午前/3.ストラテジ系/2.システム企画.md
@@ -21,6 +21,18 @@
 →  
 SLA導入の目的です。  
 
+#### 平成26年秋期　問66
+
+"情報システム・モデル取引・契約書"によれば，ユーザ(取得者)とベンダ(供給者)間で請負型の契約が適切であるとされるフェーズはどれか。
+
+![!](https://www.ap-siken.com/kakomon/26_aki/img/66.gif)  
+
+情報システム・モデル取引・契約書より、フェーズの分けと契約類型の表を引用します。  
+
+![!](https://www.ap-siken.com/kakomon/26_aki/img/66a.gif)  
+
+この表の中で契約が「請負型」となっているフェーズは、**システム方式設計(システム内部設計)～システム結合** となっているので「エ」が適切です。  
+
 ### グリーン調達
 
 品質や価格の要件を満たすだけでなく，環境負荷の小さい製品やサービスを，環境負荷の低減に努める事業者から優先して購入することである。
