--- a/BasicInformation/午前/3.ストラテジ系/7.法務.md
+++ b/BasicInformation/午前/3.ストラテジ系/7.法務.md
@@ -23,16 +23,29 @@
 
 ![!](https://www.ap-siken.com/kakomon/03_aki/img/80.gif)  
 
-[例1]  
-商品の売上が予想を超えたことによって，製造，出荷及び顧客サービスの作業量が増大したので，期間を3か月間とし，限度時間を超えて勤務する人数や所要時間を定めて特別条項を適用した。  
-→正しい。予想外の出来事による業務量の増加、期間を3カ月と定めている、労働者の範囲や限度時間を定めているなど特別条項の適用に当たり必要な条件を満たしています（労働基準法36条5項）。  
+#### 令和3年秋期　問80
 
-退職者の増加に伴い従業員一人当たりの業務量が増大したので，新規に要員を雇用できるまで，特に期限を定めずに特別条項を適用した。→
-→  
-特別条項の適用を受けるには、36協定に、1年のうち6カ月以内で通常の限度時間を超える月数を定めなくてはなりません。  
-よって、期間を定めずに特別条項を適用することはできません（労働基準法36条2項2号）。  
+労働基準法で定める36協定において，あらかじめ労働の内容や事情などを明記することによって，臨時的に限度時間の上限を超えて勤務させることが許される特別条項を適用する36協定届の事例として，適切なものはどれか。
+
+[例1]  
+
+商品の売上が予想を超えたことによって，製造，出荷及び顧客サービスの作業量が増大したので，期間を3か月間とし，限度時間を超えて勤務する人数や所要時間を定めて特別条項を適用した。
+→
+正しい。予想外の出来事による業務量の増加、期間を3カ月と定めている、労働者の範囲や限度時間を定めているなど特別条項の適用に当たり必要な条件を満たしています（労働基準法36条5項）。
+
+新技術を駆使した新商品の研究開発業務がピークとなり，3か月間の業務量が増大したので，労働させる必要があるために特別条項を適用した。
+→
+36協定の限度時間に関する上限を定めた規定は、新たな技術、商品又は役務の研究開発に係る業務については適用されません。よって、特別条項を適用することはできず、通常の限度時間の範囲（上限はない）で労働させなくてはなりません（労働基準法36条11項）。
+
+退職者の増加に伴い従業員一人当たりの業務量が増大したので，新規に要員を雇用できるまで，特に期限を定めずに特別条項を適用した。
+→
+特別条項の適用を受けるには、36協定に、1年のうち6カ月以内で通常の限度時間を超える月数を定めなくてはなりません。よって、期間を定めずに特別条項を適用することはできません（労働基準法36条2項2号）。
 →  
 うちの状態のはずなのだが、不正解って事は法律に違反しているって事か？  
+
+慢性的な入手不足なので，増員を実施し，その効果を想定して1年間を期限とし，特別条項を適用した。
+→
+特別条項が適用できるのは、通常予見することのできない業務量の大幅な増大等に伴い臨時的に通常の限度時間を超えて労働させる必要がある場合に限られます。慢性的な労働人員の不足を事由として特別条項の適用を受けることはできません（労働基準法36条5項）。
 
 ### 瑕疵担保責任(かしたんぽせきにん)
 
