やっぱり追加

--- a/BasicInformation/午前/1.テクノロジ系/10.ネットワーク.md
+++ b/BasicInformation/午前/1.テクノロジ系/10.ネットワーク.md
@@ -188,16 +188,21 @@ RIPではホップ数(経由するルータ数)を基準に最適ルートを選
 
 CSMA/CD方式は一本の同軸ケーブルに複数のコンピュータが接続されているバス型のトポロジを前提としており、次のような手順で送信が行われます。  
 
-1.伝送路上に他のノードからフレームが送出されていないかを確認する  
-2.複数のクライアントは同じ回線を共用し、他者が通信をしていなければ自分の通信を開始する。  
-3.複数の通信が同時に行われた場合は衝突を検出し、送信を中止してランダム時間待ってから再び送信をする。  
+1. 伝送路上に他のノードからフレームが送出されていないかを確認する  
+2. 複数のクライアントは同じ回線を共用し、他者が通信をしていなければ自分の通信を開始する。  
+3. 複数の通信が同時に行われた場合は衝突を検出し、送信を中止してランダム時間待ってから再び送信をする。  
 
 伝送路上での衝突を許容する仕組みとなっていて、制御が簡単な割に伝送効率が良いという特徴があります。  
-→それぞれのステーションがキャリア検知を行うとともに，送信データの衝突が起きた場合は再送する。  
+→  
+それぞれのステーションがキャリア検知を行うとともに，送信データの衝突が起きた場合は再送する。  
 
 CSMA/CDは、伝送路上の通信量が増加するにつれて衝突の発生も増加し、さらに再送が増え通信量が増えてしまうという欠点があります。  
 一般にCSMA/CD方式では、伝送路の使用率が30%を超えると急激に送信遅延時間が長くなってしまい実用的ではなくなると言われています。  
-→衝突発生時の再送動作によって，衝突の頻度が増すとスループットが下がる。  
+→  
+衝突発生時の再送動作によって，衝突の頻度が増すとスループットが下がる。  
+
+※令和元年秋期　問32  
+それぞれのステーションがキャリア検知を行うとともに，送信データの衝突が起きた場合は再送する。  
 
 ### CSMA/CA方式(Carrier Sense Multiple Access with Collision Avoidance)(搬送波感知多重アクセス／衝突回避方式)
 
@@ -217,9 +222,10 @@ RTS/CTS方式は、無線LANのアクセス制御方式の一つでRTS(Request T
 
 各ノードに論理的な順位付けを行い，送信権を順次受け渡し，これを受け取ったノードだけが送信を行う。  
 
-### TDMA方式
+### TDMA(Time Division Multiple Access，時分割多元接続)
 
 タイムスロットを割り当てられたノードだけが送信を行う。  
+タイムスロットと呼ばれる単位で分割して，同一周波数において複数の通信を可能にする。  
 
 ### IPパケット
 
@@ -692,12 +698,16 @@ IPアドレスの最上位部分のビットパターンで、クラスA ～ ク
 IPアドレスからブロードキャストアドレスを得るには、サブネットマスクでビットが"1"になっている部分（ネットワーク部）にはホストのIPアドレスをそのまま使い、  
 サブネットマスクのビットが"0"になっている部分（ホストアドレス部）のビットは全て"1"にします。  
 
-サブネットマスクをビット反転すると、ネットワーク部のビットが"0"、ホストアドレス部のビットが"1"になったビット列となります。  
-これと対象IPアドレスを論理和(OR)演算すると、ネットワーク部は元のIPアドレスのビットそのまま、ホストアドレス部は全て"1"になったビット列（ブロードキャストアドレス）を得ることができます。  
+ブロードキャストは、あるネットワークに属するすべてのノードに対してデータを同時伝送することです。
+
+#### 令和3年秋期　問35
+
+IPv4ネットワークにおいて，あるホストが属するサブネットのブロードキャストアドレスを，そのホストのIPアドレスとサブネットマスクから計算する方法として，適切なものはどれか。ここで，論理和，論理積はビットごとの演算とする。
 
 ![!](https://www.ap-siken.com/kakomon/03_aki/img/35.gif)  
 
-あるネットワークに属するすべてのノードに対してデータを同時伝送することです。
+サブネットマスクをビット反転すると、ネットワーク部のビットが"0"、ホストアドレス部のビットが"1"になったビット列となります。  
+これと対象IPアドレスを論理和(OR)演算すると、ネットワーク部は元のIPアドレスのビットそのまま、ホストアドレス部は全て"1"になったビット列（ブロードキャストアドレス）を得ることができます。  
 
 ### ブロードキャストストーム
 
