・3年春情報システム ・2年秋セキュリティ・組み込みシステム ・赤問数問

--- a/BasicInformation/午前/1.テクノロジ系/10.ネットワーク.md
+++ b/BasicInformation/午前/1.テクノロジ系/10.ネットワーク.md
@@ -238,9 +238,22 @@ MACアドレスによってデータリンク層の通信を行うために、IP
 ### 最長一致(ロンゲストマッチ)
 
 ルータは、ルーティングテーブル内に宛先アドレスに合致するエントリが複数ある場合には、プレフィックス長が最も長いエントリを選択します。  
+
+#### 平成27年秋期　問32
+
+ルータがルーティングテーブルに①～④のエントリをもつとき，10.1.1.250 宛てのパケットをルーテイングする場合に選択するエントリはどれか。ここで，ルータは最長一致検索及び可変長サブネットマスクをサポートしているものとする。
+
+![!](https://www.ap-siken.com/kakomon/27_aki/img/32.gif)  
+
 宛先アドレス「10.1.1.250」と各エントリを比較すると以下のように、①、②、③に合致することがわかります。  
 
 ![!](https://www.ap-siken.com/kakomon/27_aki/img/32a.gif)  
+
+その後、最長一致検索により合致した3つのエントリの中でプレフィックス長が最も長いエントリが選択されることになります。したがって正解は「③」です。
+
+因みに宛先が「0.0.0.0/0」であるエントリ④はルーティングテーブル内に合致するものがない場合に選択されるデフォルトゲートウェイの指定です。
+
+※ビット単位で一致する箇所が最長なモノを選ぶのがロンゲストマッチ  
 
 ---
 
@@ -372,11 +385,20 @@ IPアドレスは、パケットを送信元ホストから宛先ホストに届
 
 TCP/IPの通信処理で使われる伝送制御プロトコルのひとつでTCPと同じトランスポート層に位置します。  
 TCPでは信頼性を担保するために、コネクション確立、再送処理、輻輳処理などの様々な仕組みが取り入れられていますが、その分だけ通信のオーバヘッドは増加してしまいます。  
-UDPは、TCPから信頼性確保を取り除いたコネクションレス型の通信を実現するプロトコルです。ヘッダ構成もTCPと比べて簡素化されデータ比率が高められるようになっています。  
+UDPは、TCPから信頼性確保を取り除いたコネクションレス型の通信を実現するプロトコルです。  
+ヘッダ構成もTCPと比べて簡素化されデータ比率が高められるようになっています。  
 UDPは、リアルタイム性が重視される音声や画像のストリーム配信、および、DNS、DHCP、NTPなどのアプリケーション層プロトコルで用いられています。  
+
+### TCPとUDP
 
 TCP…信頼性重視  
 UDP…通信効率、リアルタイム性重視  
+
+#### 令和3年秋期　問34
+
+UDPのヘッダフィールドにはないが，TCPのヘッダフィールドには含まれる情報はどれか。
+
+TCPは信頼性の高い通信を提供するためのプロトコルのため様々なフィールドがありますが、UDPは軽量かつリアルタイム性を重視した通信を提供するプロトコルのため非常に単純な構造です。  
 
 ![TCPヘッダーとUDPヘッダー](https://www.ap-siken.com/kakomon/03_aki/img/34.gif)  
 
