--- a/BasicInformation/午前/3.ストラテジ系/3.経営戦略マネジメント.md
+++ b/BasicInformation/午前/3.ストラテジ系/3.経営戦略マネジメント.md
@@ -146,6 +146,30 @@ $ターゲットリターン価格＝原価＋{(投下資本×目標収益率)÷
 
 リサーチなどによる消費者の値頃感に基づいて価格を決定する。
 
+### 浸透価格戦略
+
+新規製品を市場に投入する際に、価格を低い水準に設定することで可能な限り多くの顧客を獲得し、早期に認知度アップやシェア拡大を狙う価格戦略です。  
+市場シェアを獲得した後は、大量生産によるコスト削減などで中長期的に利益を生み出し初期コストを回収します。  
+浸透価格戦略は、価格弾力性が大きい日用品業界などの価格戦略でよく見られます。  
+
+※平成29年春期　問68
+
+### 上澄み吸収戦略
+
+浸透価格戦略とは逆に、最初に価格を高い水準に設定し、徐々に価格を下げていく価格戦略。  
+
+### 収穫戦略
+
+売上高をできるだけ維持しながら，製品や事業に掛けるコストを徐々に引き下げていくことによって，短期的なキャッシュフローの増大を図る。
+
+### 即時撤退戦略
+
+事業を分社化し，その会社を売却することによって，投下資金の回収を図る。
+
+### 拡大戦略
+
+新規事業に進出することによって，企業を成長させ，利益の増大を図る。
+
 ---
 
 **SWOT分析**  
