--- a/BasicInformation/午前/3.ストラテジ系/6.企業活動.md
+++ b/BasicInformation/午前/3.ストラテジ系/6.企業活動.md
@@ -197,11 +197,23 @@ E：(500個－200個)×5千円＝1,500千円
 各戦略を選択した場合に得られる最大利得が最も大きくなる戦略を選ぶ楽観的な考え方です。  
 
 **マクシミン原理**  
-各戦略を選択した場合に得られる最小利得が最も大きくなる戦略を選ぶ保守的な考え方です。  
-マクシミン原理は、各戦略を選択したときに得られる最小利得が最も大きくなる戦略を選ぶという保守的な考え方です。  
+各戦略を選択した場合に得られる**最小利得が最も大きくなる戦略を選ぶ**保守的な考え方です。  
+※高、中、低は関係ない。それぞれの最小値を比べた中で一番大きいモノを選べばよい。  
 
-高、中、低は関係ない。  
-それぞれの最小値を比べた中でどれが一番大きいかが重要か。
+#### 令和3年秋期　問75
+
+いずれも時価100円の株式A～Dのうち，一つの株式に投資したい。経済の成長を高，中，低の三つに区分したときのそれぞれの株式の予想値上がり幅は，表のとおりである。マクシミン原理に従うとき，どの株式に投資することになるか。
+
+![!](https://www.ap-siken.com/kakomon/03_aki/img/75.gif)  
+
+各株式の最小利得は次のようになります。  
+
+成長率・中のときの10円
+成長率・中のときの5円
+成長率・低のときの5円
+成長率・低のときの－10円
+
+マクシミン原理に従う場合、それぞれの最小利得を比べたときに最も利益が大きくなるAに投資すると結論づけられます。したがって「ア」が正解です。  
 
 ### 生産ラインに資材を投入する時間間隔
 
