--- a/BasicInformation/午前/3.ストラテジ系/7.法務.md
+++ b/BasicInformation/午前/3.ストラテジ系/7.法務.md
@@ -318,9 +318,18 @@ A社がシステム開発を行うに当たり，外部業者B社を利用する
 ・事業活動に有用な技術上又は営業上の情報であること  
 ・**公然と知られていないこと**  
 
-[2]  
+#### 令和3年春期　問78
+
+不正競争防止法で禁止されている行為はどれか。  
+
+他社のヒット商品と商品名や形状は異なるが同等の機能をもつ商品を販売する。  
+→  
+不正競争防止法では問題ありません。ただし、特許権等の侵害に当たらないかを注意しなければなりません。  
+
 広く知られた他人の商品の表示に，自社の商品の表示を類似させ，他人の商品と誤認させて商品を販売する。  
-→正しい。他人のよく知られた商品表示と誤認させる行為は不正競争に該当し、不正競争防止法により禁止されています。  
+→  
+正しい。他人のよく知られた商品表示と誤認させる行為は不正競争に該当し、不正競争防止法により禁止されています。  
+だますようなのはダメってこと。  
 
 ### シュリンクラップ契約
 
