--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -672,3 +672,10 @@ NaN (not-a-number)
         }
 ```
 
+今日は2年秋の午後問題を消化できれば勝ちかな。
+主にネットワークとデータベースになるか。
+組み込みとセキュリティは昨日消化した。
+情報システムはおまけでやってもいいかな。
+まぁやるか。
+後はいつものように赤門を解いていく。
+
