--- a/BasicInformation/午前/2.マネジメント系/1.プロジェクトマネジメント.md
+++ b/BasicInformation/午前/2.マネジメント系/1.プロジェクトマネジメント.md
@@ -101,13 +101,11 @@ JIS Q 21500によれば、計画のプロセス群では対象群ごとに以下
 
 ### アクティビティ定義
 
-プロジェクトの成果物を生成するために実施すべき具体的な作業を特定する。  
-
 WBSでは、プロジェクト全体を成果物を基準として階層的に分割していきますが、このとき最下層の成果物を作成する作業単位を「ワークパッケージ」といいます。  
 アクティビティとは、このワークパッケージの基準となっている成果物を生成するための具体的な作業単位に分割したものです。  
 
-例)  
-プロジェクトの成果物を生成するために実施すべき具体的な作業を特定する。  
+※プロジェクトの成果物を生成するために実施すべき具体的な作業を特定する。  
+※平成27年春期　問52  
 
 ### プロジェクトと定常業務
 
@@ -336,9 +334,8 @@ SV(スケジュール差異)＝負
 
 ### アローダイアグラム
 
-### プロジェクト期間を短縮する方法
 
-#### クラッシング
+### クラッシング
 
 [1]  
 アクティビティに追加資源を投入して、所要期間を短縮することでスケジュールの短縮を図る方法  
@@ -347,7 +344,7 @@ SV(スケジュール差異)＝負
 プロジェクトのスコープを変更せずにコストを追加投入することでプロジェクト全体のスケジュールを短縮させる方法です。  
 プロジェクト全体のスケジュール全体を短縮するためには、クリティカルパス上の作業を短縮しなければならない。  
 
-#### ファストトラッキング
+### ファストトラッキング
 
 開始当初の計画では直列に並んでいた作業を同時並行的に行ったり、作業の前後を入れ替えたりすることで期間短縮を図る方法
 
