--- a/BasicInformation/午前/3.ストラテジ系/1.システム戦略.md
+++ b/BasicInformation/午前/3.ストラテジ系/1.システム戦略.md
@@ -4,6 +4,39 @@
 
 ## 情報システム戦略
 
+### IT投資評価
+
+#### 事前評価
+
+実施前の投資案件に対して、内部の了解を得るとともに他のプロジェクトとの整合などの全体最適の観点から評価を行う。  
+投資実行の可否を判断するための情報を提供する役割を担う。  
+
+#### 中間評価
+
+実施中の投資案件の実績をモニタリングし評価する。  
+実施計画の軌道修正を判断するための情報を提供する役割を担う。  
+
+#### 事後評価
+
+実施済の投資案件が事前に設計した目的・効果を達成しているかどうかを評価する。  
+IT投資の実施効果を上位マネジメントに報告するとともに、終結以後の改善策について判断するための情報を提供する役割を担う。  
+
+#### 平成28年春期　問61
+
+IT投資評価を，個別プロジェクトの計画，実施，完了に応じて，事前評価，中間評価，事後評価として実施する。事前評価について説明したものはどれか。
+
+事前に設定した効果目標の達成状況を評価し，必要に応じて目標を達成するための改善策を検討する。
+目標の達成状況を評価し「改善策を検討する」という記述があるのでプロジェクト実施中の評価とわかります。したがって中間評価に該当します。
+
+実施計画と実績との差異及び原因を詳細に分析し，投資額や効果目標の変更が必要かどうかを判断する。
+分析後に「変更が必要かどうかを判断する」という記述があるのでプロジェクト実施中の評価とわかります。したがって中間評価に該当します。
+
+投資効果の実現時期と評価に必要なデータ収集方法を事前に計画し，その時期に合わせて評価を行う。
+事後評価に該当します。
+
+投資目的に基づいた効果目標を設定し，実施可否判断に必要な情報を上位マネジメントに提供する。
+正しい。「効果目標の設定」は計画段階で行うことや、実施可否の判断の前段階で行われる評価なので、事前評価に該当します。
+
 ---
 
 ## EA(エンタープライズアーキテクチャ)
