--- a/BasicInformation/午前/3.ストラテジ系/7.法務.md
+++ b/BasicInformation/午前/3.ストラテジ系/7.法務.md
@@ -725,7 +725,7 @@ CCライセンスを利用することで、作者は著作権を保持したま
 
 また、欠陥による被害がその製造物自体の被害に留まった場合であれば、この法律の適用外となり民法による救済対象となります。  
 
-[例1]  
+[例1 平成30年春期　問78]  
 ROM化したソフトウェアを内蔵した組込み機器  
 →ソフトウェアは無体物であり対象外ですが、この場合は欠陥がある部品(ソフトウェア)を含むハードウェアに欠陥があるものとされるため対象となります。  
 
