最後の復習

--- a/BasicInformation/午前/2.マネジメント系/3.システム監査.md
+++ b/BasicInformation/午前/2.マネジメント系/3.システム監査.md
@@ -255,6 +255,9 @@
 
 監査人が監査対象となった母集団全体に関する結論を導き出すための合理的な基礎を得るため、母集団内のすべてのサンプリング単位に抽出の機会が与えられるような方法で、母集団内の100%未満の項目に監査手続を適用することをいいます。  
 
+※平成30年秋期　問58  
+許容逸脱率とは，受け入れることができる所定の内部統制からの逸脱率であり，監査人がサンプルの件数を決めるときに用いられる指標である。  
+
 #### 許容逸脱率
 
 [1]  
