--- a/BasicInformation/午前/3.ストラテジ系/7.法務.md
+++ b/BasicInformation/午前/3.ストラテジ系/7.法務.md
@@ -72,6 +72,7 @@
 
 2. 下請代金の支払遅延  
 物品等を受領した日（役務提供委託の場合は，役務が提供された日）から起算して60日以内に定めた支払期日までに下請代金を全額支払わない行為  
+支払い期日は、受領日から起算して60日以内、かつ、できる限り短い期間内に定めることとしています。  
 
 3. 下請代金の減額  
 発注時に決定した下請代金を「下請事業者の責に帰すべき理由」がないにもかかわらず発注後に減額する行為  
@@ -112,7 +113,7 @@
 
 ※「具体的な金額を記載することが困難なやむを得ない事情がある場合」には「具体的な金額を定めることとなる算定方法」を記載することも認められています。  
 
-[例2]  
+[例2 令和元年秋期　問79]  
 親事業者が下請事業者から納品を受けた際に、下請事業者に責任がないにもかかわらず、給付の受領を拒むことは禁止されています。  
 受領を拒むことができるのは、  
 ①契約書面に明記された委託内容と異なる場合、  
@@ -122,6 +123,9 @@
 
 ※納品され受領したソフトウェアの仕様を変更したいので，返品した。  
 →親事業者の一方的な設計変更を理由とした受領拒否は認められていません。よって、親事業者の違法行為となります。  
+
+※納品されるソフトウェアに不具合があるので，受領拒否した。
+下請事業者の責に帰すべき理由がないのに受領拒否することは禁止されています。しかし、本肢はソフトウェアに瑕疵があるので受領を拒むことができます。
 
 [例3]  
 顧客が求める仕様が確定していなかったので，発注の際に，下請事業者に仕様が未記載の書面を交付し，仕様が確定した時点では，内容を書面ではなく口頭で伝えた。  
@@ -483,9 +487,13 @@ A社からグループ企業であるB社に転籍した従業員の特定個人
 
 ### プロバイダ責任制限法が定める特定電気通信役務提供者が行う送信防止措置
 
-権利侵害を防ぐための送信防止措置の結果，情報の発信者に損害が生じた場合でも，一定の条件を満たしていれば，特定電気通信役務提供者は賠償責任を負わない。  
+#### 令和2年秋期　問78
 
-特定電気通信役務提供者は、送信防止措置によって発信者に生じた損害について、当該措置が送信を防止するために必要な限度で行われたものであり、かつ、以下2つのいずれかに該当する場合に免責されます（法3条2項）。  
+プロバイダ責任制限法が定める特定電気通信役務提供者が行う送信防止措置に関する記述として，適切なものはどれか。
+
+権利侵害を防ぐための送信防止措置の結果，情報の発信者に損害が生じた場合でも，一定の条件を満たしていれば，特定電気通信役務提供者は賠償責任を負わない。  
+→
+正しい。特定電気通信役務提供者は、送信防止措置によって発信者に生じた損害について、当該措置が送信を防止するために必要な限度で行われたものであり、かつ、以下2つのいずれかに該当する場合に免責されます（法3条2項）。  
 
 ・情報の流通によって他人の権利が不当に侵害されていると信じるに足りる相当の理由があるとき  
 ・権利を侵害された者から送信防止措置の申立てを受け、発信者に同意するかどうかを照会した場合に、照会した日から7日が経過しても発信者から同意しない申出がなかったとき  
@@ -494,6 +502,12 @@ A社からグループ企業であるB社に転籍した従業員の特定個人
 →  
 特定電気通信による情報の流通によって権利を侵害された者は、著作権の侵害であれば著作権関係信頼性確認団体、商標権の侵害であれば商標権関係信頼性確認団体を経由して送信防止措置を申し立てることができます。  
 個人情報保護委員会ではありません。信頼性確認団体では本人性の確認、権利者であることの確認、ガイドラインへの準拠等の確認が行われるので、信頼性確認団体から申出を受理したプロバイダ等は迅速かつ適正に送信防止措置をできるようになります。  
+
+明らかに不当な権利侵害がなされている場合でも，情報の発信者から事前に承諾を得ていなければ，特定電気通信役務提供者は送信防止措置の結果として生じた損害の賠償責任を負う。  
+→  
+情報の流通によって他人の権利が不当に侵害されていると信じるに足りる相当の理由があるときには、特定電気通信役務提供者(プロバイダ等)は、送信防止措置によって発信者に生じた損害について免責されます（法3条2項1号）。相当の理由の例として以下の例があります。  
+・発信者への確認その他の必要な調査により、十分な確認を行った場合  
+・通常は明らかにされることのない私人のプライバシー情報（住所、電話番号等）について当事者本人から連絡があった場合で、当該者の本人性が確認できている場合  
 
 ### 特定個人情報の適正な取扱いに関するガイドライン
 
@@ -573,8 +587,9 @@ A社からグループ企業であるB社に転籍した従業員の特定個人
 特定の分野ごとにWebページのURLを収集し，独自の解釈を付けたリンク集は，著作権法で保護され得る。  
 →正しい。ある特定の目的のために参考となるWebページを紹介するコメント付き「リンク集」などは、紹介するWebページの選定などに作成した人の創造性が現れているので編集著作物として保護されます。  
 
-[例3]  
-プログラムの著作物について，著作権法上，適法である行為  
+[例3 令和元年秋期　問78]  
+プログラムの著作物について，著作権法上，**適法**である行為  
+
 ・処理速度を向上させるために，購入したプログラムを改変した。  
 →正しい。プログラムを効果的に実行できるようにするための改変は著作権法で認められた行為です。  
 
@@ -582,8 +597,20 @@ A社からグループ企業であるB社に転籍した従業員の特定個人
 ただし、著作権法20条2項では特定の4つのケースに限り改変を認めています。  
 ・用字又は用語の変更その他の改変で、学校教育の目的上やむを得ないと認められるもの  
 ・建築物の増築、改築、修繕又は模様替えによる改変  
-・特定の電子計算機においては実行し得ないプログラムの著作物を当該電子計算機において実行し得るようにするため、又はプログラムの著作物を電子計算機においてより効果的に実  行し得るようにするために必要な改変  
+・特定の電子計算機においては実行し得ないプログラムの著作物を当該電子計算機において実行し得るようにするため、又はプログラムの著作物を電子計算機においてより効果的に実行し得るようにするために必要な改変  
 ・その他、著作物の性質並びにその利用の目的及び態様に照らしやむを得ないと認められる改変  
+
+海賊版を複製したプログラムと事前に知りながら入手し，業務で使用した。  
+→  
+著作権を侵害する行為によって作成された複製物等を、その事情を知りながら業務上使用する行為は、みなし侵害行為として禁止されています。  
+
+業務処理用に購入したプログラムを複製し，社内教育用として各部門に配布した。  
+→  
+複製権及び頒布権を侵害する行為であるため違法です。  
+
+職務著作のプログラムを，作成した担当者が独断で複製し，他社に貸与した。  
+→  
+業務上作成したプログラムの著作権は原則として法人に帰属します。作成した担当者は著作者ではないので、勝手に貸与すると法人の著作権を侵害することになります。  
 
 [例4]  
 A社は顧客管理システムの開発を，情報システム子会社であるB社に委託し，B社は要件定義を行った上で，設計・プログラミング・テストまでを協力会社であるC社に委託した。C社ではD社員にその作業を担当させた。  
